--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
-    "target": "esnext",
+    "target": "es2019",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "baseUrl": ".",
