--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "@types/pino": "^6.0.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^4.0.0"
+    "pino-pretty": "^4.0.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
