--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,18 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/app
-      - /app/node_modules
+      - react-volume:/app/packages/client/dist
   nginx:
     image: nginx:1.17-alpine
     env_file:
       - .env
     volumes:
-      - ./packages/client/dist:/usr/share/nginx/html:ro
+      - react-volume:/usr/share/nginx/html:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - 80:80
     depends_on:
       - node
+
+volumes:
+  react-volume:
