--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,28 +6,22 @@
     "build": "npx webpack --mode production"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@thisproject/core": "^1.0.0",
-    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
+    "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.8",
-    "@types/react-router": "^5.1.7",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0",
-    "css-loader": "^3.5.3",
-    "eslint-plugin-react": "^7.20.0",
-    "html-webpack-plugin": "^4.3.0",
-    "style-loader": "^1.2.1",
+    "eslint-plugin-react": "^7.21.3",
+    "html-webpack-plugin": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
