--- a/lcldev/docker-compose.yml
+++ b/lcldev/docker-compose.yml
@@ -7,8 +7,12 @@ services:
     env_file:
       - .env
     ports:
-    - 443:3001
-    - 3001:3001
+    - 3000:3000
     volumes:
       - ..:/app
       - /app/node_modules
+      - /app/packages/core/node_modules
+      - /app/packages/client/node_modules
+      - /app/packages/server/node_modules
+      - /app/packages/client/dist
+      - /app/packages/server/dist
