--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,26 +2,26 @@
   "name": "@thisproject/client",
   "version": "1.0.0",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "npx webpack --mode production"
+    "dev": "webpack serve",
+    "build": "npx webpack"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@material-ui/core": "^4.11.3",
+    "@reduxjs/toolkit": "^1.5.0",
     "@thisproject/core": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.50",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "eslint-plugin-react": "^7.21.3",
-    "html-webpack-plugin": "^4.5.0",
-    "webpack-dev-server": "^3.11.0"
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.12",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/webpack-dev-server": "^3.11.1",
+    "eslint-plugin-react": "^7.22.0",
+    "html-webpack-plugin": "^5.3.0"
   }
 }
