--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,23 +2,24 @@
   "name": "@thisproject/server",
   "version": "1.0.0",
   "scripts": {
-    "watch:build": "npx webpack -w",
-    "watch:server": "nodemon dist/server.js | ./node_modules/.bin/pino-pretty -c -t -i pid,hostname",
-    "dev": "node watch-shim.js && npm-run-all --parallel watch:*",
-    "build": "npx webpack --mode production",
+    "dev": "node watch-shim.js && npm-run-all --parallel dev:watch dev:run",
+    "dev:watch": "webpack --watch",
+    "dev:run": "nodemon dist/server.js",
+    "build": "npx webpack",
     "start": "node dist/server.js"
   },
   "dependencies": {
     "@thisproject/core": "^1.0.0",
     "express": "^4.17.1",
-    "pino": "^6.6.1"
+    "pino": "^6.11.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/pino": "^6.3.2",
-    "nodemon": "^2.0.4",
+    "@types/express": "^4.17.11",
+    "@types/pino": "^6.3.6",
+    "@types/webpack-node-externals": "^2.5.0",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^4.2.1",
+    "pino-pretty": "^4.7.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
